[package]
name = "bootleg"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A simple cli tool to copy to the clipboard"
repository = "https://github.com/hadronomy/bootleg"
authors = ["Pablo Hérnandez <noreply@hadronomy.com>"]

[package.metadata.wix]
upgrade-guid = "3078A9EB-4663-48ED-B068-20752B53B9BD"
path-guid = "302878D0-C4C7-4771-87AA-FAFD5EF41422"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.50", features = ["derive"] }
clap-help = "1.5.0"
const_format = "0.2.35"
crossterm = "0.29.0"
human-panic = "2.0.3"
miette = { version = "7.6.0", features = ["fancy"] }
owo-colors = { version = "4.2.3", features = ["supports-colors"] }
serde = { version = "1.0.228", features = ["derive"] }
shadow-rs = "1.4.0"
supports-color = "3.0.2"
taplo = "0.14.0"
termimad = "0.34.0"
thiserror = "2.0.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"

[profile.release]
lto = true

[profile.dev]
incremental = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[build-dependencies]
shadow-rs = "1.4.0"

[dev-dependencies]
assert_cmd = { version = "2.1.1", features = ["color", "color-auto"] }
predicates = "3.1.3"
